@@ -1,18 +1,21 @@
-/**
- * https://leetcode.com/problems/strobogrammatic-number-ii/
- * 
- * Time Complexity:     O()
- * Space Complexity:    O()
- * 
- * References:
- *  https://leetcode.com/problems/strobogrammatic-number-ii/discuss/67280/AC-clean-Java-solution
- */
 package com.an7one.leetcode.lvl3.lc0247;
+import com.an7one.util.Constant;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+/**
+ * @author: Leon
+ * https://leetcode.com/problems/strobogrammatic-number-ii/
+ *
+ * Time Complexity:     O()
+ * Space Complexity:    O()
+ *
+ * References:
+ *  https://leetcode.com/problems/strobogrammatic-number-ii/discuss/67280/AC-clean-Java-solution
+ */
+@SuppressWarnings({Constant.WARNING.UNUSED})
 public class SolutionApproach0DFSRecursive {
     public List<String> findStrobogrammatic(int n) {
         return dfs(n, n);
@@ -20,7 +23,8 @@ public class SolutionApproach0DFSRecursive {
 
     private List<String> dfs(int n, int m) {
         if (n == 0)
-            return Arrays.asList("");
+            return List.of("");
+
         if (n == 1)
             return Arrays.asList("0", "1", "8");
 
